<resources>
    <string name="app_name">Safe for my Pets</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="string_empty"></string>
    <string name="drawer_group_plants">Toxicity of plants</string>
    <string name="drawer_group_more">More</string>
    <string name="main_menu_cats">Cats</string>
    <string name="main_menu_cats_description">PLACEHOLDER: Some witty description about cats and how adorable they are.</string>
    <string name="main_menu_dogs">Dogs</string>
    <string name="main_menu_dogs_description">PLACEHOLDER: Some text about dogs</string>
    <string name="main_menu_snackbar_downloading">Downloading data. A few more seconds…</string>
    <string name="main_menu_snackbar_downloaded">Data downloaded!</string>
    <string name="drawer_menu_about">About</string>

    <string name="menu_search">Search</string>
    <string name="menu_debug">Debug</string>

    <string name="menu_debug_clear_cache">Clear Cache</string>
    <string name="menu_debug_kill_app">Kill Application</string>

    <string name="title_fragment_plants_cats">Dangerous Plants for Cats</string>
    <string name="title_fragment_plants_dogs">Dangerous Plants for Dogs</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_debug">Debug</string>

    <string name="plant_details_empty_image_description">Image is still loading</string>
    <string name="plant_details_scientific_name">Scientific Name: %1$s</string>
    <string name="plant_details_common_names">Other names: %1$s</string>
    <string name="plant_details_source">Source: %1$s</string>
    <string name="plant_details_family">Family: %1$s</string>
    <string name="plant_details_cat_dangerous">Dangerous for cats</string>
    <string name="plant_details_cat_safe">Safe for cats</string>
    <string name="plant_details_cat_unknown">Unknown for cats</string>
    <string name="plant_details_dog_dangerous">Dangerous for dogs</string>
    <string name="plant_details_dog_safe">Safe for dogs</string>
    <string name="plant_details_dog_unknown">Unknown for dogs</string>
    <string name="download_catalog_loading">We are retrieving the latest information. Please wait a few seconds…</string>
    <string name="plant_suggestion_scientific_name">Scientific Name:</string>
    <string name="plant_suggestion_main_name">Suggest a new plant</string>
    <string name="plant_suggestion_family">Family:</string>
    <string name="plant_suggestion_dangerous_dog">Dangerous for Dogs:</string>
    <string name="plant_suggestion_dangerous_cat">Dangerous for Cats:</string>
    <string name="plant_suggestion_safe">Safe</string>
    <string name="plant_suggestion_unknown">Unknown</string>
    <string name="plant_suggestion_dangerous">Dangerous</string>
    <string name="about_licence_flaticon">Icons made by <a href="https://www.flaticon.com/authors/freepik">freepik</a> from
        <a href="https://www.flaticon.com">www.flaticon.com</a>
    </string>
    <string name="banned_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="plant_suggestion_send">Send</string>
    <string name="plant_suggestion_cancel">Cancel</string>
    <string name="leave_some_feedback">Report a problem</string>
    <string name="thanks_feedback">Thank\'s for your feedback</string>
    <string name="thanks_suggestion">Thank\'s for your suggestion</string>

    <string name="provider_config_plants_url">https://petproject-api-prod.azurewebsites.net/api/plants?code=zcwy2bKTjaUcF7FaYvqh7xUfgLi68DHm5K5gCrdenudyayWlLypiqg==</string>
    <string name="provider_config_mainname_url">https://petproject-api-prod.azurewebsites.net/api/name/main?code=ujaT/7OpCQ1W1kX069Sh3wWtNTdjWdJusHprnSD/Sj04FqLGFqFO9Q==</string>
    <string name="provider_config_toxicities_url">https://petproject-api-prod.azurewebsites.net/api/toxicity?code=LXdXm2I/3sYtPLnYuq2kRsrIfhdMmQy2087Hg7jji18q87hSzvTNOw==</string>
    <string name="provider_config_commonname_url">https://petproject-api-prod.azurewebsites.net/api/name/common/%s?code=h4/YT0eIa7H7M4yuOkZIEyiZd1LN4brUsfwiKHbW7TEz90DngFwTIg==</string>
    <string name="provider_config_family_url">https://petproject-api-prod.azurewebsites.net/api/family/%s?code=ZvlpHItoIJWtAH7JAI0vUAJhaHHF10zEy4dPFjnEMumEl7aIaLIXIg==</string>
    <string name="provider_config_description_url">https://petproject-api-prod.azurewebsites.net/api/description/%s/%s?code=25xBDLjicaqLIM9jusKdZHvs8C5lMaZPY8jPIRW5SFVQnyp/6ChKsA==</string>
</resources>
