<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/mainMenuFragment">

    <fragment
        android:id="@+id/mainMenuFragment"
        android:name="com.cramsan.petproject.mainmenu.MainMenuFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main_menu">
        <action
            android:id="@+id/action_mainMenuFragment_to_plantsListFragment"
            app:destination="@id/plantsListFragment" />
        <action
            android:id="@+id/action_mainMenuFragment_to_debugMenuFragment"
            app:destination="@id/debugMenuFragment" />
        <action
            android:id="@+id/action_mainMenuFragment_to_downloadCatalogDialogFragment"
            app:destination="@id/downloadCatalogDialogFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
        <action
            android:id="@+id/action_mainMenuFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_mainMenuFragment_to_plantDetailsFragment"
            app:destination="@id/plantDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/plantsListFragment"
        android:name="com.cramsan.petproject.plantslist.PlantsListFragment"
        tools:layout="@layout/fragment_plants_list">
        <action
            android:id="@+id/action_plantsListFragment_to_plantDetailsFragment"
            app:destination="@id/plantDetailsFragment" />
        <action
            android:id="@+id/action_plantsListFragment_to_downloadCatalogDialogFragment"
            app:destination="@id/downloadCatalogDialogFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
        <action
            android:id="@+id/action_plantsListFragment_to_plantSuggestionFragment"
            app:destination="@id/plantSuggestionFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
        <argument
            android:name="AnimalType"
            app:argType="com.cramsan.petproject.appcore.model.AnimalType" />
    </fragment>
    <fragment
        android:id="@+id/plantDetailsFragment"
        android:name="com.cramsan.petproject.plantdetails.PlantDetailsFragment"
        tools:layout="@layout/fragment_plant_details">
        <action
            android:id="@+id/action_plantDetailsFragment_to_downloadCatalogDialogFragment"
            app:destination="@id/downloadCatalogDialogFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
        <action
            android:id="@+id/action_plantDetailsFragment_to_plantFeedbackFragment"
            app:destination="@id/plantFeedbackFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
        <argument
            android:name="PlantId"
            app:argType="integer" />
        <argument
            android:name="AnimalType"
            app:argType="com.cramsan.petproject.appcore.model.AnimalType" />
    </fragment>
    <fragment
        android:id="@+id/debugMenuFragment"
        android:name="com.cramsan.petproject.debugmenu.DebugMenuFragment"
        android:label="@string/title_activity_debug" />
    <dialog
        android:id="@+id/downloadCatalogDialogFragment"
        android:name="com.cramsan.petproject.download.DownloadCatalogDialogFragment"
        tools:layout="@layout/fragment_download_dialog">
        <action
            android:id="@+id/action_downloadCatalogDialogFragment_pop"
            app:popUpTo="@id/downloadCatalogDialogFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
    </dialog>
    <dialog
        android:id="@+id/plantFeedbackFragment"
        android:name="com.cramsan.petproject.feedback.PlantFeedbackFragment"
        tools:layout="@layout/fragment_plant_feedback">
        <argument
            android:name="AnimalType"
            app:argType="com.cramsan.petproject.appcore.model.AnimalType" />
        <argument
            android:name="PlantId"
            app:argType="integer" />
        <action
            android:id="@+id/action_plantFeedbackFragment_pop"
            app:popUpTo="@id/plantFeedbackFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
    </dialog>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.cramsan.petproject.about.AboutFragment"
        android:label="@string/title_activity_about"
        tools:layout="@layout/fragment_about"/>
    <dialog
        android:id="@+id/plantSuggestionFragment"
        android:name="com.cramsan.petproject.suggestion.PlantSuggestionFragment"
        tools:layout="@layout/fragment_plant_suggestion">
        <action
            android:id="@+id/action_plantSuggestionFragment_pop"
            app:popUpTo="@id/plantSuggestionFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
    </dialog>

</navigation>